--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    Hello World
+    Hello World, Ini Maulana Muhammad Rizky dong, salam kenal yaa
 </body>
 </html>
