“Changed Hello world with img and h2 to display simple profile data. Image file added in the folder images and used as resource in the img element in index.html file

--- a/index.html
+++ b/index.html
@@ -8,5 +8,10 @@
 </head>
 <body>
     Hello World, Ini Maulana Muhammad Rizky dong, salam kenal yaa
+
+    <div>
+        <img src="images/dumas.jpeg" alt="profile image" />
+        <h2>Maulana Muhammad Rizky</h2>
+     </div>
 </body>
 </html>
