added initial style.css to style the profile

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body>
     Hello World, Ini Maulana Muhammad Rizky dong, salam kenal yaa
 
-    <div>
-        <img src="images/dumas.jpeg" alt="profile image" />
-        <h2>Maulana Muhammad Rizky</h2>
+    <div id="profile-container" >
+        <img id="profile-image" src="images/dumas.jpeg" alt="profile image" />
+        <h2 id="profile-name"> Maulana Muhammad Rizky</h2>
      </div>
 </body>
 </html>
