added new div as header container with id = header

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
     Hello World, Ini Maulana Muhammad Rizky dong, salam kenal yaa
 
+    <div id="header">Header</div>
     <div id="profile-container" >
         <img id="profile-image" src="images/dumas.jpeg" alt="profile image" />
         <h2 id="profile-name"> Maulana Muhammad Rizky</h2>
