added new div as footer container with id = footer

--- a/index.html
+++ b/index.html
@@ -15,5 +15,6 @@
         <img id="profile-image" src="images/dumas.jpeg" alt="profile image" />
         <h2 id="profile-name"> Maulana Muhammad Rizky</h2>
      </div>
+     <div id="footer">Footer</div>
 </body>
 </html>
